<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="title_text">My Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="project_1">Spotify Streamer</string>
    <string name="project_2">Score Apps</string>
    <string name="project_3">Build it BIgger</string>
    <string name="project_4">XYZ Reader</string>
    <string name="project_5">Capstone Project</string>
    <string name="opens_app">This button opens the app </string>

</resources>
