<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FAFAFA"
    >

    <TextView
        style="@style/title_styles"
        android:text="@string/title_text"
        />

    <Button
        style="@style/project_one_to_four_styles"
        android:text="@string/project_1"
        android:onClick="showProject"
        />

    <Button
        style="@style/project_one_to_four_styles"
        android:text="@string/project_2"
        android:onClick="showProject"
        />


    <Button
        style="@style/project_one_to_four_styles"
        android:text="@string/project_3"
        android:onClick="showProject"
        />

    <Button
        style="@style/project_one_to_four_styles"
        android:text="@string/project_4"
        android:onClick="showProject"
        />

    <Button
        style="@style/capstone_project"
        android:text="@string/project_5"
        android:onClick="showProject"
        />


</LinearLayout>
